tests/ui/nll/polonius/location-insensitive-constraints-issue-70044.nll.stderr
error[E0502]: cannot borrow `one` as immutable because it is also borrowed as mutable
  --> $DIR/location-insensitive-constraints-issue-70044.rs:22:20
   |
LL |         let mut y = &mut one;
   |                     -------- mutable borrow occurs here
...
LL |     println!("{}", one);
   |                    ^^^ immutable borrow occurs here
LL |     println!("{}", zero);
   |                    ---- mutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
